feat(server-grpc): queries